--- a/web-app/src/app/dashboard.component.html
+++ b/web-app/src/app/dashboard.component.html
@@ -5,7 +5,7 @@ Hashrate:: <input [formControl]="hashrateControl">MH <br>
 Power use: <input [formControl]="powerControl">W <br>
 Power cost <input [formControl]="powerCostControl">$ <br>
 
-Best localbitcoin: <span *ngIf="btcToNzd$ | async as btcToNzd"><a target="_blank" [href]="btcToNzd.url">{{btcToNzd.price}}</a></span>
+Best localbitcoin: <span *ngIf="btcToNzd$ | async as btcToNzd"><a target="_blank" [@flashChange]="btcToNzd.price" [href]="btcToNzd.url">{{btcToNzd.price}}</a></span>
 
 <h2>ETH/ETC</h2>
 <table>
@@ -16,12 +16,12 @@ Best localbitcoin: <span *ngIf="btcToNzd$ | async as btcToNzd"><a target="_blank
     <td>Exchange Rate (BTC)</td>
   </thead>
   <tbody>
-    <tr *ngFor="let coin of ethProfitablity$ | async">
+    <tr *ngFor="let coin of ethProfitablity$ | async; trackBy: trackByName; let i = index" [@flashChange]="i" >
       <td>{{coin.tag}}</td>
       <td>{{coin.name}}</td>
-      <td>{{coin.profitablity}}</td>
-      <td>{{coin.exchangeRate}}</td>
-      <td>{{coin.profitPerMonth}}</td>
+      <td [@flashChange]="coin.profitablity">{{coin.profitablity}}</td>
+      <td [@flashChange]="coin.exchangeRate">{{coin.exchangeRate}}</td>
+      <td [@flashChange]="coin.profitPerMonth">{{coin.profitPerMonth}}</td>
     </tr>
   </tbody>
 </table>
@@ -36,11 +36,11 @@ Best localbitcoin: <span *ngIf="btcToNzd$ | async as btcToNzd"><a target="_blank
     <td>Exchange Rate (BTC)</td>
   </thead>
   <tbody>
-    <tr *ngFor="let coin of coins$ | async">
+    <tr *ngFor="let coin of coins$ | async; trackBy: trackByName; let i = index" [@flashChange]="i" >
       <td>{{coin.tag}}</td>
       <td>{{coin.name}}</td>
-      <td>{{coin.profitablity}}</td>
-      <td>{{coin.exchangeRate}}</td>
+      <td [@flashChange]="coin.profitablity">{{coin.profitablity}}</td>
+      <td [@flashChange]="coin.exchangeRate">{{coin.exchangeRate}}</td>
     </tr>
   </tbody>
 </table>
