--- a/web/src/app/dashboard.component.html
+++ b/web/src/app/dashboard.component.html
@@ -1,14 +1,9 @@
-Dashboard
-<!--<rm-pool-monitoring></rm-pool-monitoring>-->
-<!--<resetter></resetter>-->
-
 <h2>Profitablity</h2>
 
-Hashrate: <form-input [control]="hashrateControl"></form-input>MH <br>
-Power use: <form-input [control]="powerControl"></form-input>W <br>
-Power cost <form-input [control]="powerCostControl"></form-input>$ <br>
-
-Best localbitcoin:
+Hashrate:
+<form-input [control]="hashrateControl"></form-input>MH <br> Power use:
+<form-input [control]="powerControl"></form-input>W <br> Power cost
+<form-input [control]="powerCostControl"></form-input>$ <br> Best localbitcoin:
 <span *ngIf="btcToNzd$ | async as btcToNzd">
   <a target="_blank" [@flashChange]="btcToNzd.price" [href]="btcToNzd.url">{{btcToNzd.price | currency:'NZD':true}}</a>
 </span>
@@ -23,60 +18,12 @@ Best localbitcoin:
     <td>Profit per Month</td>
   </thead>
   <tbody>
-    <tr *ngFor="let coin of ethProfitablity$ | async; trackBy: trackByName; let i = index" [@flashChange]="i" >
+    <tr *ngFor="let coin of ethProfitablity$ | async; trackBy: trackByName; let i = index" [@flashChange]="i">
       <td>{{coin.tag}}</td>
       <td>{{coin.name}}</td>
-      <td [@flashChange]="coin.exchangeRate">{{(coin.difficulty / 1000000000000).toFixed(2)}}</td>
-      <td [@flashChange]="coin.exchangeRate">{{coin.exchangeRate}}</td>
-      <td [@flashChange]="coin.profitPerMonth">{{coin.profitPerMonth | currency:'NZD':true}}</td>
+      <td>{{(coin.difficulty / 1000000000000).toFixed(2)}}</td>
+      <td>{{coin.exchangeRate}}</td>
+      <td>{{coin.profitPerMonth | currency:'NZD':true}}</td>
     </tr>
   </tbody>
 </table>
-
-
-<!--<h2>Coins</h2>
-<table>
-  <thead>
-    <td>Tag</td>
-    <td>Name</td>
-    <td>Profitablity</td>
-    <td>Exchange Rate (BTC)</td>
-  </thead>
-  <tbody>
-    <tr *ngFor="let coin of coins$ | async; trackBy: trackByName; let i = index" [@flashChange]="i" >
-      <td>{{coin.tag}}</td>
-      <td>{{coin.name}}</td>
-      <td [@flashChange]="coin.profitablity">{{coin.profitablity}}</td>
-      <td [@flashChange]="coin.exchangeRate">{{coin.exchangeRate}}</td>
-    </tr>
-  </tbody>
-</table>
--->
-
-<!--<h2>Rigs</h2>
-<table>
-  <thead>
-    <td>Name</td>
-    <td>Is Active</td>
-    <td>ETH Hashrate</td>
-    <td>Seconddary Hashrate</td>
-    <td>GPU Temp</td>
-  </thead>
-  <tbody>
-    <tr *ngFor="let rig of rigService.rigs | async" style="width:100%" class="gray-background">
-      <td>{{rig.mac}}</td>
-      <td>{{rig.IsActive}}</td>
-      <td>N/A</td>
-      <td>N/A</td>
-      <td>{{rig.CoreTemp}}</td>
-      <td>
-        <button md-raised-button (click)="currentConsole = rig.console" >Show Console</button>
-        <button md-raised-button >Settings</button>
-        </td>
-    </tr>
-  </tbody>
-</table>
-<button md-raised-button *ngIf="currentConsole != null" (click)="currentConsole = null" >Clear Current Console</button>
-<div *ngFor="let line of currentConsole">
-  {{line.PostedAt | date:'hh:mm:ss'}}: {{line.Message}}
-</div>-->
